css/style.css
@import url("photographer.css");

:root {
  --color-primary: #901c1c;
  --color-secondary: #d3573c;
  --color-tertiary: #757575;
  --color-likes-counter: #db8876;
}

body {
  font-family: "DM Sans", sans-serif;
  margin: 0 auto;
  max-width: 1440px;
}

header {
  display: flex;
  flex-direction: row;
  justify-content: space-between;
  align-items: center;
  height: 90px;
}

h1 {
  color: var(--color-primary);
  margin-right: 100px;
}

.logo {
  height: 50px;
  margin-left: 100px;
}

.photographer_section {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 70px;
  margin-top: 100px;
}

.photographer_section article {
  justify-self: center;
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  text-align: center;
}

.photographer_section article a {
  text-decoration: none;
}

.photographer_section article h2 {
  color: var(--color-secondary);
  font-size: 36px;
  line-height: 46.87px;
  margin-top: 20px;
  margin-bottom: 0;
}

.photographer_section article img,
.photographer-photo {
  height: 200px;
  width: 200px;
  border-radius: 50%;
  /* box-shadow: 0px 4px 12px 0px #00000040; */
  position: relative;
}

.photographer_section article figure {
  position: relative;
}

.inset-box-shadow,
.inset-box-shadow::after {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  bottom: 0;
  border-radius: 50%;
}

.inset-box-shadow {
  box-shadow: inset 0px -11px 0px 3px rgba(255, 255, 255, 0.85),
    inset 0px -2px 5px -1px white, 0 0 0 20px white;
}

.inset-box-shadow::after {
  content: "";
  z-index: 2;
  box-shadow: inset 0px -8px 3px 0px rgb(255 255 255 / 85%);
}

.photographer_section article h3 {
  font-size: 13px;
  color: var(--color-primary);
  margin: 0;
}

.photographer_section article .tagline {
  font-size: 10px;
  margin: 0;
}

.photographer_section article .price {
  font-size: 9px;
  color: var(--color-tertiary);
  margin: 0;
}

